--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,61 @@
-<h1>Alexandra Suárez - 2025</h1>
+<!DOCTYPE html>
+
+
+    <h1>Welcome to CSE Motors!</h1>
+    <div class="hero">
+        
+        <img src="images/vehicles/delorean.jpg" alt="Delorean">
+        <div class="description">
+            <p>DMC Delorean</p>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dicel</p>
+
+            <button class="button">Own Today</button>
+    </div>
+
+    
+    <div class="details_upgrades">
+          
+        <section class="details">
+            <h3>DMC DELOREAN REVIEWS</h3>
+            <ul>
+                <li>
+                    <p>"So fast it's almost like travelling in time"</p>
+                </li>
+                <li>
+                    <p>"Coolest ride on the road." (4/5)</p>
+                </li>
+                <li>    
+                    <p>"I'm feeling McFly" (5/5)</p>
+                </li>
+                <li>    
+                    <p>"The most futuristic ride of our day." (4.5/5)</p>
+                </li>   
+                <li>
+                    "80's livin and Ilove it!" (5/5)
+                </li>
+            </ul>
+        </section>
+        <div class="upgradesGrid">
+            <figure class="upgradImg">
+                <img src="images/upgrades/flux-cap.png" alt="Flux-cap">
+                <figcaption>Flux Capacitor</figcaption>
+            </figure>
+            <figure class="upgradImg">
+                <img src="images/upgrades/flame.jpg" alt="Flame">
+                <figcaption>Flame Decals</figcaption>
+            </figure>
+            <figure class="upgradImg">
+                <img src="images/upgrades/bumper_sticker.jpg" alt="bumper sticker">
+                <figcaption>Bumper Stickers</figcaption>
+            </figure>
+            <Figure class="upgradImg">
+                <img src="images/upgrades/hub-cap.jpg" alt="Hub-cap">
+                <figcaption>Hub Caps</figcaption>
+            </figure>
+        </div>
+    </div>
+    
+
+
