--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,220 @@
 *:after {
   box-sizing: border-box;
 }
+
+main{
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden; 
+  margin: 0 auto;
+}
+
+h1{
+  margin-bottom: 50px;
+}
+.hero{
+  position: relative;
+  width: 100%;
+  max-width: 600px; /* ajusta el tamaño total */
+  margin: 0 auto;
+}
+
+.hero img {
+  
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+/* Caja de descripción sobre la imagen */
+.description {
+  position: absolute;
+  top: 1px;
+  left: 10%;
+  background-color: rgba(183, 228, 240, 0.85); 
+  padding: 10px;
+  
+  max-width: 150px;
+}
+
+.description p:first-child {
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #001d3d; 
+  margin-bottom: 8px;
+}
+
+.description p {
+  margin: 4px 0;
+  font-size: 0.9rem;
+}
+
+/* Botón Own Today*/
+.button {
+  display: inline-block;
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  padding: 8px 14px;
+  margin-top: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.button:hover {
+  background-color: #004c99;
+}
+
+
+.upgradesGrid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  grid-template-rows: repeat(2, auto);   
+  width: 100%;
+  max-width: 400px; 
+  margin: 0 auto; 
+  justify-items: center;
+  box-sizing: border-box;
+  padding: 2px;
+  
+  & .upgradImg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid rgb(46, 47, 61); 
+    background-color: rgb(45, 142, 252);
+    width: 90%;
+    height: 160px;
+    max-width: 250px; 
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    padding: 2px;
+    
+  
+  }
+}
+.upgradImg img{
+    display: block;
+    width: 80%;
+    height: 120px;
+    border-radius: 8px;
+    object-fit: contain;
+    padding: 5px;
+    
+    
+}
+
+.upgradImg figcaption {
+  
+  font-size: 0.9rem;
+  color: #030303;
+  background-color: #565c638c;
+  padding: 3px;
+
+}
+.details{
+  width: 95%;
+  padding: 10px;
+}
+
+#top-header{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 80px;
+  align-items: center;
+  
+  & a{
+    text-decoration: none;
+    color: black;
+    margin-top: 10px;
+  }
+  
+  & .siteName{
+    font-size: 1.4rem;
+    margin-left: 10px;
+    font-weight: bold;
+
+    
+  }
+  
+}
+ 
+nav {
+  background-color: #333;
+  padding: 0.3rem 0;
+  
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 1.5rem;
+}
+
+nav a {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 0.7rem;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* Responsivo */
+
+@media (min-width: 768px) {
+  main {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    border: 4px solid rgb(145, 145, 236);
+  }
+  
+  nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2rem;
+    height: 40px;
+  }
+
+  nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 600;
+    
+  }
+  .hero {
+    max-width: 100%;
+  }
+
+  .description {
+    top: auto;
+    bottom: 10%;
+    left: 5%;
+    right: 5%;
+    max-width: 90%;
+  }
+
+  .details_upgrades{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .description{
+    top: 20%;
+    height: 190px;
+    width: 20%;
+  }
+  
+}
