--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.ejs">Home</a></li>
         <li><a href="#">Custom</a></li>
         <li><a href="#">Sedan</a></li>
         <li><a href="#">SUV</a></li>
