--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,15 +73,16 @@ h1{
 /* Botón Own Today*/
 .button {
   display: inline-block;
-  background-color: var(--accent-color);
+  background-color: black;
   color: white;
-  font-family: var(--primary-color);
+  font-family: var(--principal-font);
   border: none;
   padding: 8px 14px;
   margin-top: 10px;
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
+  
 }
 
 .button:hover {
@@ -100,8 +101,8 @@ h1{
   box-sizing: border-box;
   padding: 2px;
   
-  
-  & .upgradImg{
+}
+.upgradImg{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,8 +117,8 @@ h1{
     padding: 2px;
     
   
-  }
 }
+
 .upgradImg img{
     display: block;
     width: 80%;
@@ -133,7 +134,7 @@ h1{
   
   font-size: 0.9rem;
   color:white;
-  background-color: rgb(45, 142, 252);
+  background-color: rgb(15, 15, 15);
   padding: 4px;
   
 
@@ -141,12 +142,13 @@ h1{
 .details{
   width: 95%;
   padding: 10px;
-  & h3{
+}
+.details h4{
     color: var(--primary-color);
     font-family: var(--principal-font);
     font-weight: bolder;
-  }
 }
+
 
 #top-header{
   display: flex;
@@ -154,22 +156,20 @@ h1{
   justify-content: space-between;
   height: 80px;
   align-items: center;
-  
-  & a{
+}
+#top-header a{
     text-decoration: none;
     color: var(--accent-color);
     margin-top: 10px;
-  }
+}
   
-  & .siteName{
+#top-header .siteName{
     font-size: 1.4rem;
     margin-left: 10px;
     font-weight: bold;
-
-    
-  }
-  
 }
+  
+
  
 nav {
   background-color: #333;
@@ -196,6 +196,11 @@ nav a {
 nav a:hover {
   text-decoration: underline;
   color: var(--accent-color);
+}
+
+#tools a{
+  color: black;
+  font-weight: 600;
 }
 
 /* Responsivo */
