--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         
         <img src="images/vehicles/delorean.jpg" alt="Delorean">
         <div class="description">
-            <p>DMC Delorean</p>
+            <h3>DMC Delorean</h3>
             <p>3 Cup holders</p>
             <p>Superman doors</p>
             <p>Fuzzy dicel</p>
@@ -19,7 +19,7 @@
     <div class="details_upgrades">
           
         <section class="details">
-            <h3>DMC DELOREAN REVIEWS</h3>
+            <h4>DMC DELOREAN REVIEWS</h4>
             <ul>
                 <li>
                     <p>"So fast it's almost like travelling in time"</p>
