--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 
 
     <h1>Welcome to CSE Motors!</h1>
+    <%- messages() %>
     <div class="hero">
         
         <img src="images/vehicles/delorean.jpg" alt="Delorean">
