--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -16,7 +16,7 @@
         <label class="regLabel">Last Name: * <input type="text" id="account_lastname" name="account_lastname" required></label>
       <label class="regLabel">Email: * <input type="email" id="account_email" name="account_email" required placeholder="xxxxxx@xxx.com"></label>
     
-      <label class="regLabel">Password: *<input type="password" id="account_password" name= "account_password" required pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_\-+=\[\]{};:'\,.<>/?])(?=.{12,}).*$"></label>
+      <label class="regLabel">Password: *<input type="password" id="account_password" name= "account_password" required pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_\-+=\[\]{};:'\,.>/?])(?=.{12,}).*$"></label>
     </fieldset>
 
       <button type="submit" class="button">My Register</button>
