--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -9,7 +9,7 @@
 
 <%- messages() %>
 <div class="containerRegister">
-  <form action="/account/register" method="get" class="loginRegister">
+  <form action="/account/register" method="post" class="loginRegister">
     <fieldset >
       <legend>Register Information</legend>
         <label class="regLabel">First Name: * <input type="text" id="account_firstname" name="account_firstname" required></label>
@@ -18,7 +18,7 @@
     
       <label class="regLabel">Password: *<input type="password" id="account_password" name= "account_password" required pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_\-+=\[\]{};:'\,.>/?])(?=.{12,}).*$"></label>
     </fieldset>
-
+      <p>"Password must be at least 12 characters, include 1 uppercase letter, 1 number, and 1 special character."</p>
       <button type="submit" class="button">My Register</button>
       
     
