--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
-<% const d = new Date()
-let year = d.getFullYear() %>
 <footer>
-  <p class="copyright">& copy ; <%= year %>, CSE 340 App</p>
+  <% const d = new Date()
+  let year = d.getFullYear() %>
+
+  <p class="copyright">© copyright ; <%= year %>, CSE 340 App</p>
   <a href="/error">Error</a>
 </footer>
