--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -8,12 +8,20 @@
 
 
 <%- messages() %>
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
 
 <div class="containerForm">
-  <form action="/account/login" method="post" class="loginForm">
+  <form class="loginForm" action="/account/login" method="post">
     <fieldset >
       <legend>Login Information</legend>
-      <label class="formLabel">Email: * <input type="email" id="account_email" name="account_email" required placeholder="xxxxxx@xxx.com"></label>
+      <label class="formLabel">Email: * <input type="email" id="account_email" name="account_email" required placeholder="xxxxxx@xxx.com" value="<%= locals.account_firstname %>"></label>
     
       <label class="formLabel">Password: *<input type="password" id="account_password" name= "account_password" required pattern="[A-Za-z0-9\s#\-,\.\/]{8,}"></label>
     </fieldset>
