Login Proces W05 learning activities

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -24,7 +24,7 @@
       <legend>Login Information</legend>
       <label class="formLabel">Email: * <input type="email" id="account_email" name="account_email" required placeholder="xxxxxx@xxx.com" value="<%= locals.account_firstname %>"></label>
     
-      <label class="formLabel">Password: *<input type="password" id="account_password" name= "account_password" required pattern="[A-Za-z0-9\s#\-,\.\/]{8,}"></label>
+      <label class="formLabel">Password: *<input type="password" id="account_password" name= "account_password" required ></label>
     </fieldset>
 
       <button type="submit" class="button">LOGIN</button>
