--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -7,9 +7,43 @@
 
 <%- messages() %>
 
+<% if (locals.account_firstname) { %>
+    <% if (locals.account_type === 'Client') { %>
+      <h2>Welcome <%= locals.account_firstname %></h2>
+    <% } else { %>
+      <h2>Welcome <%= locals.account_firstname %></h2>
+      <h3>You have elevated access (<%= locals.account_type %>)</h3>
+    <% } %>
+  <% } %>
 
 
-<ul>
+  <section id="update-account">
+    <p>
+      <a href="/account/update/<%= account_id %>">
+        Update Account Information
+      </a>
+    </p>
+  </section>
+
+  <!-- ONLY EMPLOYEE O ADMIN -->
+  <% if (locals.account_type === 'Employee' || locals.account_type === 'Admin') { %>
+    <h2>Manage Inventory</h2>
+    <p>Select a classification from the list</p>
+    <%- classificationSelect %>
+    <table class="inventoryDisplay" id="inventoryDisplay"></table>
+
+    <noscript>JavaScript must be enabled to use this page.</noscript>
+    <script src="/js/inventory.js"></script>
+  <% } %>
+
+
+
+
+
+
+<!----COMO LO TENIA INICIALMENTE------>
+
+<!-- <ul>
   <li><a href="/inv/add-classification">Add New Classification</a></li>
   <li><a href="/inv/add-vehicle">Add New Vehicle</a></li>
 </ul>
@@ -20,4 +54,4 @@
 <table class="inventoryDisplay" id="inventoryDisplay"></table>
 
 <noscript>JavaScript must be enabled to use this page.</noscript>
-<script src="/js/inventory.js"></script>
+<script src="/js/inventory.js"></script> -->
