--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -24,6 +24,15 @@
         Update Account Information
       </a>
     </p>
+    <% if (locals.account_type === 'Client') { %>
+      <h2>Request a Vehicle</h2>
+      <p>Select a classification from the list</p>
+      
+      <%- classificationSelect %>
+      <table class="inventoryDisplay" id="vehicleRequestTable"></table>
+      <noscript>JavaScript must be enabled to use this page.</noscript>
+      
+  <% } %>
   </section>
 
   <!-- ONLY EMPLOYEE O ADMIN -->
@@ -39,9 +48,9 @@
     <table class="inventoryDisplay" id="inventoryDisplay"></table>
 
     <noscript>JavaScript must be enabled to use this page.</noscript>
-    <script src="/js/inventory.js"></script>
+    
   <% } %>
-
+<script src="/js/inventory.js"></script>
 
 
 
