--- a/views/inventory/request.ejs
+++ b/views/inventory/request.ejs
@@ -7,8 +7,26 @@
 
 <%- gridDetail %> 
 
+<div class="containerRegister">
+  
+  <form action="/inv/request" method="post" class="loginRegister">
+    <fieldset >
+      <legend>Confirm Your Vehicle.</legend>
+      <input type="hidden" name="inv_id" value="<%= itemData.inv_id %>">
+        
+        <label class="regLabel">Make * <input type="text" id="inv_make" name="inv_make" value="<%= itemData.inv_make %>" readonly ></label>
+        <label class="regLabel">Model * <input type="text" id="inv_model" name="inv_model" value="<%= itemData.inv_model %>" readonly></label>
+        <label class="regLabel">Year * <input type="number" id="inv_year" name="inv_year" value="<%= itemData.inv_year %>" readonly></label>
+        <label class="regLabel">Price * <input type="number" id="inv_price" name="inv_price" value="<%= itemData.inv_price %>" readonly></label>
+        
+      </fieldset>
+      
+      <button type="submit" class="button">Request My Vehicle</button>
+      
+    
+  </form>
 
 
-<button type="submit" class="button">Request My Vehicle</button>
+
       
     
